--- a/_config.yml
+++ b/_config.yml
@@ -10,11 +10,11 @@ description: My personal website
 external-image: false
 picture: assets/images/profile.jpg
 
-url: http://amanchandra333.github.io
+url: http://amanchandra333.github.io/website
 # your url: http://USERNAME.github.io
 
 permalink: /:title/
-
+baseurl: "/website"
 markdown: kramdown
 highlighter: rouge
 
