--- a/_config.yml
+++ b/_config.yml
@@ -29,15 +29,15 @@ highlighter: rouge
 #disqus: mydisqus
 
 # if you don't have any of social below, comment the line
-facebook: fb.com/amanchandra333
-twitter: twitter.com/amanchandra333
+facebook: amanchandra333
+twitter: amanchandra333
 #google: mygoogle
-instagram: instagram.com/amanchandra_333
+instagram: amanchandra_333
 # pinterest: mypinterest
-linkedin: in.linkedin.com/in/amanchandra333
+linkedin: in/amanchandra333
 #youtube: myyoutube
 #spotify: myspotify
-github: github.com/amanchandra333
+github: amanchandra333
 #medium: medium
 #vimeo: myvimeo
 email: amanchandra333@gmail.com
