--- a/_config.yml
+++ b/_config.yml
@@ -30,8 +30,8 @@ analytics-google: 'UA-85968481-1'
 
 # if you don't have any of social below, comment the line
 facebook: amanchandra333
+google: amanchandra333
 twitter: amanchandra333
-google: mygoogle
 instagram: amanchandra_333
 # pinterest: mypinterest
 linkedin: amanchandra333
