--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,7 @@ name: Aman Chandra
 bio: Student. Robotics Enthusiast. Music Lover.
 
 # twitter summary info
-description: My personal website
-
+description: Just Another Potterhead.
 # if it's an external image, update below for true
 # better with square images
 external-image: false
