--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Aman Chandra
-bio: Student. Robotics Enthusiast. Music Lover.
+bio: Student. Robotics Enthusiast. Potterhead.
 
 # twitter summary info
 description: Just Another Potterhead.
@@ -43,7 +43,7 @@ email: amanchandra333@gmail.com
 authors:
     amanchandra333:
         name: Aman Chandra
-        bio: Student. Robotics Enthusiast. Music.
+        bio: Student. Robotics Enthusiast. Potterhead.
         external-image: false
         picture: assets/images/profile.jpg
         twitter: amanchandra333
