--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ url: http://amanchandra333.github.io/website
 # your url: http://USERNAME.github.io
 
 permalink: /:title/
-baseurl: "/website"
+baseurl: "/"
 markdown: kramdown
 highlighter: rouge
 
