--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: Just Another Potterhead.
 external-image: false
 picture: assets/images/profile.jpg
 
-url: http://amanchandra333.github.io/website
+url: http://amanchandra333.github.io
 # your url: http://USERNAME.github.io
 
 permalink: /:title/
@@ -19,7 +19,7 @@ highlighter: rouge
 # and specify source (external or local).
 resume: true
 resume-external: true
-resume-url: http://amanchandra333.github.io/website/cv.pdf
+resume-url: http://amanchandra333.github.io/cv.pdf
 
 # To enable google analytics, supply your token below
 analytics-google: 'UA-85968481-1'
