--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,8 @@ picture: assets/images/profile.jpg
 
 url: http://amanchandra333.github.io
 # your url: http://USERNAME.github.io
-
+plugins:
+  - jekyll-sitemap
 permalink: /:title/
 baseurl: "/"
 markdown: kramdown
